# sjc

./: .gitignore  Makefile  README.md  build.go  embed.json  go.mod  go.sum  host.go  imports.json  init.go  install.sh  main.go  run.go  run.ts  storage.ts
.github/workflows/: deno.yml  release.yml
examples/basic/: contract.ts  hostfns.ts  val.ts
examples/basic-as/: Makefile  README.md  contract.ts  host.ts  val.ts
examples/basic-as/sdk/: host.ts  val.ts
examples/basic-rs/: Cargo.toml  Makefile  README.md
examples/basic-rs/sdk/src/: host_fns.rs  lib.rs  map.rs  object.rs
examples/basic-rs/src/: contract.rs
src/: build.ts  embed.json  host.ts  inspect.ts  run.ts  sjc.ts  val.ts
val/: str.go  val.go
