[package]
name = "basic-rs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/contract.rs"

[dependencies]
stellar_contract_sdk = {path = "./sdk"}

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
